--- a/style.css
+++ b/style.css
@@ -49,3 +49,11 @@
     transform: translateY(0);
   }
 }
+
+@media (max-width: 767.98px) {
+  .row-cols-1 > .col:not(:last-child) {
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+}
